refactor EntityDescription to fix PR comments